syntax = "proto3";

package service1pb;

// Specify the Go package import path.
option go_package = "/service1pb";

service Service1 {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc ProductList (NoParams) returns (ProdulistResponse);
}

message NoParams {}
 
message ProdulistResponse {
    int32 id = 1;
    string name = 2;
    string description =  3;
    double price = 4;   
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
} 